// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestDetails sorts by prevalence (google first) 1`] = `
Array [
  AggregateCompanyData {
    "displayName": "Google",
    "name": "Google LLC",
    "normalizedName": "google",
    "prevalence": 80.1,
    "urls": Object {
      "apis.google.com": TrackerUrl {
        "category": "Advertising",
        "url": "apis.google.com",
      },
      "fonts.gstatic.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "fonts.gstatic.com",
      },
      "google.com": TrackerUrl {
        "category": "Advertising",
        "url": "google.com",
      },
      "gstatic.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "gstatic.com",
      },
    },
  },
  AggregateCompanyData {
    "displayName": "Amazon",
    "name": "Amazon Technologies, Inc.",
    "normalizedName": "amazon",
    "prevalence": 21.5,
    "urls": Object {
      "completion.amazon.com": TrackerUrl {
        "category": "Analytics",
        "url": "completion.amazon.com",
      },
      "images-eu.ssl-images-amazon.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "images-eu.ssl-images-amazon.com",
      },
    },
  },
]
`;

exports[`RequestDetails sorts by prevalence 1`] = `
Array [
  AggregateCompanyData {
    "displayName": "Amazon",
    "name": "Amazon Technologies, Inc.",
    "normalizedName": "amazon",
    "prevalence": 21.5,
    "urls": Object {
      "completion.amazon.com": TrackerUrl {
        "category": "Analytics",
        "url": "completion.amazon.com",
      },
      "images-eu.ssl-images-amazon.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "images-eu.ssl-images-amazon.com",
      },
    },
  },
]
`;

exports[`RequestDetails uses correct display name with EntityName matches ETLD+1 1`] = `
AggregatedCompanyResponseData {
  "entities": Object {
    "bbci.co.uk": AggregateCompanyData {
      "displayName": "bbci.co.uk",
      "name": undefined,
      "normalizedName": "bbcico",
      "prevalence": 0,
      "urls": Object {
        "static.files.bbci.co.uk": TrackerUrl {
          "category": undefined,
          "url": "static.files.bbci.co.uk",
        },
      },
    },
  },
  "entitiesCount": 1,
  "requestCount": 1,
}
`;
